# src/apis/auth/dto/socialLogin.dto.ts
@@ -1,0 +1,14 @@
+import { IsString } from 'class-validator';
+
+export class SocialLoginDTO {
+    @IsString()
+    provider: string;
+
+    @IsString()
+    token: string;
+
+    constructor(data: SocialLoginDTO) {
+        this.provider = data.provider;
+        this.token = data.token;
+    }
+}
